--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,11 @@ dependencies{
 }
 
 bootRun.environment([
-        "WELCOME_MESSAGE": "A welcome message",
+        "WELCOME_MESSAGE": "Hello from Concourse",
 ])
 
 test.environment([
-        "WELCOME_MESSAGE": "A welcome message",
+        "WELCOME_MESSAGE": "Hello from Concourse",
 ])
 
 
