--- a/ci/build.yml
+++ b/ci/build.yml
@@ -18,12 +18,13 @@ run:
   args:
   - -exc
   - |
-    function stop_mysql{
+
+    function stop_mysql {
       service mysql stop
     }
     trap stop_mysql EXIT
 
-    export DEBIAN_FRONTED="noninteractive"
+    export DEBIAN_FRONTEND="noninteractive"
 
     apt-get update
     apt-get install -y software-properties-common
@@ -37,6 +38,5 @@ run:
     cd pal-tracker
 
     mysql -uroot < databases/tracker/create_databases.sql
-
-    ./gradlew -P version=$(cat ../version/number) build
+    ./gradlew -P version=$(cat ../version/number) testMigrate build
     cp build/libs/pal-tracker-*.jar ../build-output
