--- a/ci/build.yml
+++ b/ci/build.yml
@@ -37,6 +37,6 @@ run:
 
     cd pal-tracker
 
-    mysql -uroot < databases/tracker/create_databases.sql
+    mysql -uroot -pilovemz< databases/tracker/create_databases.sql
     ./gradlew -P version=$(cat ../version/number) testMigrate build
     cp build/libs/pal-tracker-*.jar ../build-output
